attempt to fix text overflow in calc display

--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ body, html {
     box-shadow: 5px 5px 0px 4px #7d7d80,
                 12px 12px 0px 1px black;
     margin-bottom: 16px; 
+    
 }
 
 #outputWrap{
@@ -73,7 +74,7 @@ body, html {
     text-align: right;
     padding: 10px;
     float: right;
-    width: 500px;
+    width: 510px;
     height: 75px;
     color: white;
     background-color: #47494a;
@@ -83,7 +84,10 @@ body, html {
 
 #calcInput {
     color: #b7c1c5;
-    padding: 5px
+    padding: 5px;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 505px;
 }
 
 #calcButtons {
